added brief decription

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>THCognitive Email Signup</title>
   <script>
     async function submitEmail(e) {
@@ -25,10 +25,21 @@
 <body class="bg-black text-white min-h-screen flex items-center justify-center px-4">
   <div class="max-w-md w-full text-center">
     <h1 class="text-3xl font-semibold mb-4">Join THCognitive</h1>
+
+    <p class="mb-4 text-gray-400">
+      THCognitive is a prototype THC sobriety testing tool designed to help inform
+      fairer cannabis policy and promote safe use. Unlike alcohol, THC currently
+      lacks reliable methods to determine active impairment. This app evaluates
+      motor skills, reaction time, and cognitive function to better understand
+      real-time effects—especially in safety-sensitive settings. Your participation
+      supports meaningful research and smarter legalization.
+    </p>
+
     <p class="mb-6 text-gray-400">
       Get early updates, insights, and behind-the-scenes from THCognitive—
       exploring the mind, performance, and high-level creative systems.
     </p>
+
     <form onsubmit="submitEmail(event)" class="flex flex-col gap-3">
       <input
         id="email"
@@ -48,4 +59,3 @@
   </div>
 </body>
 </html>
-
