--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </p>
 
     <p class="text-gray-400 text-sm mb-6 text-center">
-      Sign up for early updates, insights, and behind-the-scenes content as we shape the future of responsible cannabis use.
+      Sign up to participate in the research, as well as recieve occasional updates, insights, and results as we shape the future of responsible THC use.
     </p>
 
     <form onsubmit="submitEmail(event)" class="flex flex-col gap-4">
