--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <style>
     /* Spinner styles */
     #loadingSpinner {
+      margin-left: 8px; 
       display: none;
       margin: 0 auto;
       border: 4px solid #f3f3f3; /* Light gray */
       border-top: 4px solid #3b82f6; /* Blue */
       border-radius: 50%;
-      width: 24px;
-      height: 24px;
+      width: 40px;
+      height: 40px;
       animation: spin 1s linear infinite;
     }
 
@@ -39,7 +40,7 @@
       status.className = "text-sm text-center";
 
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbwKkQpeXwsa1vzbYHWoKg_VKT2Yh1n68RqwJx9N4--2UF7Zp1FzayheVluajiDep6Rxyg/exec", {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbx26B8tv8FujKf-BJ813plf8bggy5BCEnG9Sybu2GmoRdDCsCWymKnWB2oO4rYKC2HcEw/exec", {
           method: "POST",
           body: new URLSearchParams({ email }),
         });
